--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@volar/language-core": "^2.4.0-alpha.20",
     "@volar/language-server": "^2.4.0-alpha.20",
     "axios": "^1.7.7",
+    "d3": "^7.9.0",
     "element-plus": "^2.8.8",
     "install": "^0.13.0",
     "pinia": "^2.2.2",
@@ -20,7 +21,8 @@
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "wikipedia": "^2.1.2",
-    "wikipedia-api": "^0.0.3"
+    "wikipedia-api": "^0.0.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
